WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25777
Canvas as background-image broken with full page zoom
https://bugs.webkit.org/show_bug.cgi?id=25777
Summary
Canvas as background-image broken with full page zoom
Simon Fraser (smfr)
Reported
2009-05-13 18:20:28 PDT
When zooming on a page using canvas as background-image, the canvas background doesn't scale correctly.
Attachments
Testcase
(487 bytes, text/html)
2009-05-13 18:20 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch, testcase, changelog
(4.83 KB, patch)
2009-05-13 22:39 PDT
,
Simon Fraser (smfr)
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-05-13 18:20:42 PDT
Created
attachment 30310
[details]
Testcase
Simon Fraser (smfr)
Comment 2
2009-05-13 22:05:08 PDT
It seems that StyleGeneratedImage::imageSize() does need to take the multiplier into account sometimes.
Simon Fraser (smfr)
Comment 3
2009-05-13 22:39:41 PDT
Created
attachment 30314
[details]
Patch, testcase, changelog
Simon Fraser (smfr)
Comment 4
2009-05-14 12:21:58 PDT
http://trac.webkit.org/changeset/43720
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug