2009-05-14  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Darin Adler

        https://bugs.webkit.org/show_bug.cgi?id=25777

        StyleGeneratedImage::imageSize() needs to take zooming into account for
        fixed-size images (i.e. canvas) so that canvas-as-image-background
        renders correctly with zooming.

        Test: fast/canvas/canvas-bg-zoom.html

        * rendering/style/StyleGeneratedImage.cpp:
        (WebCore::StyleGeneratedImage::imageSize):

Canonical link: https://commits.webkit.org/35657@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@43720 268f45cc-cd09-0410-ab3c-d52691b4dbfc